# seq2sec-cmd-generator

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_PACKAGES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LORA_GUIDE.md  Makefile  PRESENTATION.md  QUICK_DEPLOYMENT.md  README.md  TESTING.md  demo.py  deployment-summary.txt  requirements.txt  run_workflow.sh  setup.py
cli/: __init__.py  cmd_generator.py
config/: train_config.yaml
cpp/: CMakeLists.txt  DEPLOYMENT_CHOICE.md  README.md  YOCTO_DEPLOY_README.md  YOCTO_README.md  build.sh  build_yocto.sh  yocto_run.sh
cpp/include/: seq2seq_inference.h  tokenizer.h
cpp/src/: main.cpp  seq2seq_inference.cpp  tokenizer.cpp
data/: commands-dataset.json  commands_dataset.csv  commands_dataset.json
docs/: DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: demo.py
models/: __init__.py  seq2seq.py
models/checkpoints/: input_vocab.txt  output_vocab.txt
scripts/: __init__.py  add_rdkb_commands.py  count_parameters.py  data_utils.py  expand_dataset.py  export_onnx.py  export_vocab_cpp.py  inference.py  quantize_onnx.py  test_model.py  test_onnx_runtime.py  test_rdkb_model.py  train.py
src/: __init__.py  dataset.py  model.py
tests/: __init__.py  test_data_utils.py  test_model.py
